update anti piracy

--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 24 Jun 2023 21:43 UTC
-# Version: 2023.0624.2143.12
+# Last modified: 25 Jun 2023 21:47 UTC
+# Version: 2023.0625.2147.43
 # Syntax: Unbound
-# Number of entries: 6813
+# Number of entries: 6833
 #
 server:
 local-zone: "zer0day.000webhostapp.com." always_nxdomain
@@ -3234,6 +3234,7 @@ local-zone: "licensekeys.org." always_nxdomain
 local-zone: "licensesnkey.com." always_nxdomain
 local-zone: "lickmytaint.com." always_nxdomain
 local-zone: "lien-torrent.com." always_nxdomain
+local-zone: "lifanmoe.net." always_nxdomain
 local-zone: "lifemovie.org." always_nxdomain
 local-zone: "ligaxxi.xyz." always_nxdomain
 local-zone: "tracker.lilithraws.cf." always_nxdomain
@@ -3382,6 +3383,7 @@ local-zone: "mahou.org." always_nxdomain
 local-zone: "mahou-shoujo.moe." always_nxdomain
 local-zone: "majin2007.com." always_nxdomain
 local-zone: "majomparade.com." always_nxdomain
+local-zone: "makegreatmusic.net." always_nxdomain
 local-zone: "malacka.com." always_nxdomain
 local-zone: "mamahd.es." always_nxdomain
 local-zone: "mamahd.org." always_nxdomain
@@ -3426,6 +3428,7 @@ local-zone: "me-4u.com." always_nxdomain
 local-zone: "fs1.mebd.net." always_nxdomain
 local-zone: "mechopirate.com." always_nxdomain
 local-zone: "medbit.ru." always_nxdomain
+local-zone: "media-sharing.com." always_nxdomain
 local-zone: "media-torrent.org." always_nxdomain
 local-zone: "mediaboxbd.com." always_nxdomain
 local-zone: "mediaboxhd.net." always_nxdomain
@@ -3493,6 +3496,7 @@ local-zone: "midiplex.net." always_nxdomain
 local-zone: "midnight-scene.com." always_nxdomain
 local-zone: "midnight-torrents.com." always_nxdomain
 local-zone: "mikkisays.net." always_nxdomain
+local-zone: "milliontorrent.pl." always_nxdomain
 local-zone: "mindwarppavilion.org." always_nxdomain
 local-zone: "bt.mindwerks.net." always_nxdomain
 local-zone: "newvoyages.mine.nu." always_nxdomain
@@ -3528,6 +3532,7 @@ local-zone: "mlcboard.com." always_nxdomain
 local-zone: "mlmsoftwarez.in." always_nxdomain
 local-zone: "tracker.mlsub.net." always_nxdomain
 local-zone: "trackers.mlsub.net." always_nxdomain
+local-zone: "mlwbd.life." always_nxdomain
 local-zone: "mlwbd.pw." always_nxdomain
 local-zone: "mma-core.com." always_nxdomain
 local-zone: "mma-torrents.com." always_nxdomain
@@ -3668,6 +3673,7 @@ local-zone: "movieswbb.com." always_nxdomain
 local-zone: "movietopia.to." always_nxdomain
 local-zone: "movietorrent.co." always_nxdomain
 local-zone: "movietown.org." always_nxdomain
+local-zone: "movieultima.online." always_nxdomain
 local-zone: "movieunlimited.net." always_nxdomain
 local-zone: "moviewapi.in." always_nxdomain
 local-zone: "moviewatcher.is." always_nxdomain
@@ -3935,6 +3941,7 @@ local-zone: "504e163a.host.njalla.net." always_nxdomain
 local-zone: "nmac.to." always_nxdomain
 local-zone: "nms-bd.com." always_nxdomain
 local-zone: "nmuca.org." always_nxdomain
+local-zone: "nnm.ru." always_nxdomain
 local-zone: "nnm-club.info." always_nxdomain
 local-zone: "nnm-club.me." always_nxdomain
 local-zone: "nnm-club.ru." always_nxdomain
@@ -4022,6 +4029,7 @@ local-zone: "nulledwarez.org." always_nxdomain
 local-zone: "nulljungle.com." always_nxdomain
 local-zone: "nullphp.net." always_nxdomain
 local-zone: "nullphpscript.com." always_nxdomain
+local-zone: "tracker.nullrouted.me." always_nxdomain
 local-zone: "nullscriptfullz.com." always_nxdomain
 local-zone: "nullzone.fr." always_nxdomain
 local-zone: "nunuyy.cc." always_nxdomain
@@ -4127,6 +4135,7 @@ local-zone: "onionplay.re." always_nxdomain
 local-zone: "onionplay.rs." always_nxdomain
 local-zone: "onionplay.se." always_nxdomain
 local-zone: "onionplay.si." always_nxdomain
+local-zone: "onionplay.to." always_nxdomain
 local-zone: "onionplay.yt." always_nxdomain
 local-zone: "online-fix.me." always_nxdomain
 local-zone: "online-life.ru." always_nxdomain
@@ -4295,6 +4304,7 @@ local-zone: "pelisplus.online." always_nxdomain
 local-zone: "pelisplus.org." always_nxdomain
 local-zone: "pelisplusgt.com." always_nxdomain
 local-zone: "pelisplushd.net." always_nxdomain
+local-zone: "pepecine.to." always_nxdomain
 local-zone: "per-fect.nl." always_nxdomain
 local-zone: "perfectddl.com." always_nxdomain
 local-zone: "petaleech.com." always_nxdomain
@@ -4318,6 +4328,7 @@ local-zone: "pinoy-tv-replay.com." always_nxdomain
 local-zone: "pinoytorrents.net." always_nxdomain
 local-zone: "piraat.xyz." always_nxdomain
 local-zone: "piracyproxy.net." always_nxdomain
+local-zone: "piratbaytpb.one." always_nxdomain
 local-zone: "piratbit.top." always_nxdomain
 local-zone: "pirate-bay.info." always_nxdomain
 local-zone: "pirate-bay.net." always_nxdomain
@@ -4356,6 +4367,7 @@ local-zone: "piratebayproxy.cx." always_nxdomain
 local-zone: "piratebayproxy.info." always_nxdomain
 local-zone: "piratebayproxy.live." always_nxdomain
 local-zone: "piratebayproxy.rocks." always_nxdomain
+local-zone: "piratebayproxy.top." always_nxdomain
 local-zone: "piratebayproxyz.com." always_nxdomain
 local-zone: "piratebays.org." always_nxdomain
 local-zone: "piratebays.win." always_nxdomain
@@ -4535,6 +4547,7 @@ local-zone: "proxy247.art." always_nxdomain
 local-zone: "proxybay.bz." always_nxdomain
 local-zone: "proxybay.gdn." always_nxdomain
 local-zone: "proxybay.onl." always_nxdomain
+local-zone: "proxybay.page." always_nxdomain
 local-zone: "proxybay.pro." always_nxdomain
 local-zone: "proxybay.tech." always_nxdomain
 local-zone: "proxybay.xyz." always_nxdomain
@@ -4652,6 +4665,7 @@ local-zone: "putlockersfm.com." always_nxdomain
 local-zone: "putlockershd.us." always_nxdomain
 local-zone: "putlockerss.online." always_nxdomain
 local-zone: "putlockertv.info." always_nxdomain
+local-zone: "putlockertv.ist." always_nxdomain
 local-zone: "putlockertv.onl." always_nxdomain
 local-zone: "putlockertv.to." always_nxdomain
 local-zone: "puzo.org." always_nxdomain
@@ -4768,6 +4782,7 @@ local-zone: "reggaetraders.net." always_nxdomain
 local-zone: "d40969.acod.regrucolo.ru." always_nxdomain
 local-zone: "rejetto.com." always_nxdomain
 local-zone: "relizer.net." always_nxdomain
+local-zone: "reload-paradise.net." always_nxdomain
 local-zone: "tracker.renfei.net." always_nxdomain
 local-zone: "renrencili.com." always_nxdomain
 local-zone: "repack.info." always_nxdomain
@@ -4827,6 +4842,7 @@ local-zone: "rom-news.org." always_nxdomain
 local-zone: "rom-world.com." always_nxdomain
 local-zone: "romsnetwork.com." always_nxdomain
 local-zone: "romtohome.com." always_nxdomain
+local-zone: "root-warez.com." always_nxdomain
 local-zone: "rootsofts.com." always_nxdomain
 local-zone: "rotorrent.ro." always_nxdomain
 local-zone: "royal-orleans.com." always_nxdomain
@@ -4842,6 +4858,7 @@ local-zone: "rulu.co." always_nxdomain
 local-zone: "run-ricky-run.com." always_nxdomain
 local-zone: "rune-server.org." always_nxdomain
 local-zone: "runwaybroadband.com." always_nxdomain
+local-zone: "rus-media.org." always_nxdomain
 local-zone: "russianfilmhub.com." always_nxdomain
 local-zone: "rustorka.com." always_nxdomain
 local-zone: "rustorrents.info." always_nxdomain
@@ -4902,6 +4919,7 @@ local-zone: "scene-rush.com." always_nxdomain
 local-zone: "sceneaccess.org." always_nxdomain
 local-zone: "scenedemon.com." always_nxdomain
 local-zone: "scenedemon.us." always_nxdomain
+local-zone: "scenefeed.org." always_nxdomain
 local-zone: "scenefz.net." always_nxdomain
 local-zone: "scenehd.org." always_nxdomain
 local-zone: "sceneleech.org." always_nxdomain
@@ -4985,6 +5003,7 @@ local-zone: "serialstart.com." always_nxdomain
 local-zone: "serialsurf.com." always_nxdomain
 local-zone: "serien.cam." always_nxdomain
 local-zone: "serien.click." always_nxdomain
+local-zone: "serien.dev." always_nxdomain
 local-zone: "serien.digital." always_nxdomain
 local-zone: "serien.express." always_nxdomain
 local-zone: "serien.fun." always_nxdomain
@@ -5187,6 +5206,7 @@ local-zone: "softmp3.org." always_nxdomain
 local-zone: "softmupparna.net." always_nxdomain
 local-zone: "softpilot.win." always_nxdomain
 local-zone: "softsapk.com." always_nxdomain
+local-zone: "softsclub.com." always_nxdomain
 local-zone: "softserialskey.com." always_nxdomain
 local-zone: "softswarez.com." always_nxdomain
 local-zone: "softtorrents.org." always_nxdomain
