--- a/unbound/doh-vpn-proxy-bypass.blacklist.conf
+++ b/unbound/doh-vpn-proxy-bypass.blacklist.conf
@@ -4,10 +4,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 25 Jun 2023 21:42 UTC
-# Version: 2023.0625.2142.41
+# Last modified: 26 Jun 2023 21:19 UTC
+# Version: 2023.0626.2119.44
 # Syntax: Unbound
-# Number of entries: 6109
+# Number of entries: 6113
 #
 server:
 local-zone: "0000a-fast-proxy.de." always_nxdomain
@@ -5750,6 +5750,7 @@ local-zone: "jp.tiarap.org." always_nxdomain
 local-zone: "tigervpn.com." always_nxdomain
 local-zone: "tiiner.com." always_nxdomain
 local-zone: "tikvpn.com." always_nxdomain
+local-zone: "timetohide.me." always_nxdomain
 local-zone: "timmes.nl." always_nxdomain
 local-zone: "tk31z.com." always_nxdomain
 local-zone: "dns.tls-data.de." always_nxdomain
@@ -5879,6 +5880,7 @@ local-zone: "unifiedvpn.com." always_nxdomain
 local-zone: "galileo.math.unipd.it." always_nxdomain
 local-zone: "unknownproxy.com." always_nxdomain
 local-zone: "unlimitedvpnapp.com." always_nxdomain
+local-zone: "unrestrict.me." always_nxdomain
 local-zone: "unrestrictedsurf.com." always_nxdomain
 local-zone: "unrestrictor.com." always_nxdomain
 local-zone: "resolver.unstoppable.io." always_nxdomain
@@ -5900,6 +5902,7 @@ local-zone: "use-application-dns.net." always_nxdomain
 local-zone: "userload.co." always_nxdomain
 local-zone: "userproxy.com." always_nxdomain
 local-zone: "usgo.info." always_nxdomain
+local-zone: "usproxies.info." always_nxdomain
 local-zone: "usproxy.nu." always_nxdomain
 local-zone: "neatdns.ustclug.org." always_nxdomain
 local-zone: "usvpn.cf." always_nxdomain
@@ -6008,6 +6011,7 @@ local-zone: "walln.com." always_nxdomain
 local-zone: "wantaquddin.com." always_nxdomain
 local-zone: "abel.waringer-atg.de." always_nxdomain
 local-zone: "dns.warpnine.de." always_nxdomain
+local-zone: "warpproxy.com." always_nxdomain
 local-zone: "watchproxy.com." always_nxdomain
 local-zone: "kswro.web.id." always_nxdomain
 local-zone: "doh.this.web.id." always_nxdomain
