--- a/unbound/dyndns.blacklist.conf
+++ b/unbound/dyndns.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 25 Jun 2023 21:44 UTC
-# Version: 2023.0625.2144.47
+# Last modified: 26 Jun 2023 21:21 UTC
+# Version: 2023.0626.2121.55
 # Syntax: Unbound
-# Number of entries: 1567
+# Number of entries: 1568
 #
 server:
 local-zone: "0000000000000000000000.com." always_nxdomain
@@ -1562,6 +1562,7 @@ local-zone: "yourtrap.com." always_nxdomain
 local-zone: "z0d.eu." always_nxdomain
 local-zone: "z86.ru." always_nxdomain
 local-zone: "dyndns.za.org." always_nxdomain
+local-zone: "zaantek.com." always_nxdomain
 local-zone: "zaibar.ro." always_nxdomain
 local-zone: "zanity.net." always_nxdomain
 local-zone: "zapto.org." always_nxdomain
