--- a/unbound/hoster.blacklist.conf
+++ b/unbound/hoster.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 25 Jun 2023 21:46 UTC
-# Version: 2023.0625.2146.16
+# Last modified: 26 Jun 2023 21:23 UTC
+# Version: 2023.0626.2123.06
 # Syntax: Unbound
-# Number of entries: 2061
+# Number of entries: 2062
 #
 server:
 local-zone: "000a.de." always_nxdomain
@@ -1967,6 +1967,7 @@ local-zone: "website.at." always_nxdomain
 local-zone: "website.org." always_nxdomain
 local-zone: "website-home.ws." always_nxdomain
 local-zone: "website2.me." always_nxdomain
+local-zone: "websitehostfree.com." always_nxdomain
 local-zone: "webspawner.com." always_nxdomain
 local-zone: "webstarts.com." always_nxdomain
 local-zone: "webuda.com." always_nxdomain
