update anti piracy

--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 25 Jun 2023 21:47 UTC
-# Version: 2023.0625.2147.43
+# Last modified: 26 Jun 2023 21:24 UTC
+# Version: 2023.0626.2124.20
 # Syntax: Unbound
-# Number of entries: 6833
+# Number of entries: 6843
 #
 server:
 local-zone: "zer0day.000webhostapp.com." always_nxdomain
@@ -3714,7 +3714,6 @@ local-zone: "mp3juicestv.com." always_nxdomain
 local-zone: "mp3lion.ru." always_nxdomain
 local-zone: "mp3menu.com." always_nxdomain
 local-zone: "mp3menu.net." always_nxdomain
-local-zone: "mp3menu.org." always_nxdomain
 local-zone: "torrent.mp3quran.net." always_nxdomain
 local-zone: "mp3rally.com." always_nxdomain
 local-zone: "mp3scene.info." always_nxdomain
@@ -5575,6 +5574,8 @@ local-zone: "thepiratebay11.org." always_nxdomain
 local-zone: "thepiratebay2.to." always_nxdomain
 local-zone: "thepiratebay3.org." always_nxdomain
 local-zone: "thepiratebay3.to." always_nxdomain
+local-zone: "thepiratebay9.info." always_nxdomain
+local-zone: "thepiratebay9.net." always_nxdomain
 local-zone: "thepiratebaya.com." always_nxdomain
 local-zone: "thepiratebayorg.org." always_nxdomain
 local-zone: "thepiratebayproxylist.se." always_nxdomain
@@ -5694,6 +5695,7 @@ local-zone: "torfinder.net." always_nxdomain
 local-zone: "torhd.com." always_nxdomain
 local-zone: "tracker.toritraders.com." always_nxdomain
 local-zone: "toriyamaworld.com." always_nxdomain
+local-zone: "tr.torland.ga." always_nxdomain
 local-zone: "torlock.com." always_nxdomain
 local-zone: "torlock.live." always_nxdomain
 local-zone: "torlock2.com." always_nxdomain
@@ -5878,6 +5880,7 @@ local-zone: "torrentqq49.com." always_nxdomain
 local-zone: "torrentqq51.com." always_nxdomain
 local-zone: "torrentqq52.com." always_nxdomain
 local-zone: "torrentqq53.com." always_nxdomain
+local-zone: "torrentqq71.com." always_nxdomain
 local-zone: "torrentqq74.com." always_nxdomain
 local-zone: "torrentquest.com." always_nxdomain
 local-zone: "torrentradar.org." always_nxdomain
@@ -6023,6 +6026,7 @@ local-zone: "trec.to." always_nxdomain
 local-zone: "tri-tavern.com." always_nxdomain
 local-zone: "tribalmixes.com." always_nxdomain
 local-zone: "tricitytorrents.com." always_nxdomain
+local-zone: "triniwarez.com." always_nxdomain
 local-zone: "triptorrents.com." always_nxdomain
 local-zone: "tracker.trojangogogo.site." always_nxdomain
 local-zone: "troypoint.com." always_nxdomain
@@ -6618,7 +6622,10 @@ local-zone: "xmovies8.org." always_nxdomain
 local-zone: "xmovies8.si." always_nxdomain
 local-zone: "xn--80a4b.com." always_nxdomain
 local-zone: "xn--thepratebay-fcb.com." always_nxdomain
+local-zone: "budvartrekker.xn-s.eu." always_nxdomain
+local-zone: "hd-hu.xn-s.eu." always_nxdomain
 local-zone: "xoomtv.xyz." always_nxdomain
+local-zone: "tterm.xorg.pl." always_nxdomain
 local-zone: "xparadise.ru." always_nxdomain
 local-zone: "xpau.se." always_nxdomain
 local-zone: "xplorenetbd.com." always_nxdomain
@@ -6728,6 +6735,7 @@ local-zone: "yts.ag." always_nxdomain
 local-zone: "yts.ai." always_nxdomain
 local-zone: "yts.am." always_nxdomain
 local-zone: "yts.digital." always_nxdomain
+local-zone: "yts.io." always_nxdomain
 local-zone: "yts.la." always_nxdomain
 local-zone: "yts.lat." always_nxdomain
 local-zone: "yts.lc." always_nxdomain
@@ -6740,11 +6748,13 @@ local-zone: "yts.pm." always_nxdomain
 local-zone: "yts.re." always_nxdomain
 local-zone: "yts.st." always_nxdomain
 local-zone: "yts.to." always_nxdomain
+local-zone: "yts.vc." always_nxdomain
 local-zone: "yts.ws." always_nxdomain
 local-zone: "yts.yt." always_nxdomain
 local-zone: "yts.zone." always_nxdomain
 local-zone: "yts-movie.cc." always_nxdomain
 local-zone: "yts-torrents.org." always_nxdomain
+local-zone: "ytshindi.xyz." always_nxdomain
 local-zone: "ytsmovietorrent.com." always_nxdomain
 local-zone: "ytsstreaming.com." always_nxdomain
 local-zone: "ytstorrent.com." always_nxdomain
