update native tracker

--- a/unbound/native.tiktok.blacklist.conf
+++ b/unbound/native.tiktok.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 22 Jun 2023 07:30 UTC
-# Version: 2023.0622.0730.49
+# Last modified: 26 Jun 2023 21:30 UTC
+# Version: 2023.0626.2130.43
 # Syntax: Unbound
-# Number of entries: 175
+# Number of entries: 176
 #
 server:
 local-zone: "gpm-mon-sg.byteoversea.com." always_nxdomain
@@ -61,6 +61,7 @@ local-zone: "analytics-useast2a.tiktok.com." always_nxdomain
 local-zone: "business-api.tiktok.com." always_nxdomain
 local-zone: "analytics.us.tiktok.com." always_nxdomain
 local-zone: "analytics-exp.us.tiktok.com." always_nxdomain
+local-zone: "analytics-ttp2.us.tiktok.com." always_nxdomain
 local-zone: "mssdk.us.tiktok.com." always_nxdomain
 local-zone: "log.tiktokv.com." always_nxdomain
 local-zone: "log-i18n.tiktokv.com." always_nxdomain
