--- a/unbound/fake.blacklist.conf
+++ b/unbound/fake.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 26 Jun 2023 21:32 UTC
-# Version: 2023.0626.2132.20
+# Last modified: 27 Jun 2023 21:17 UTC
+# Version: 2023.0627.2117.53
 # Syntax: Unbound
-# Number of entries: 15740
+# Number of entries: 15715
 #
 server:
 local-zone: "009972.com." always_nxdomain
@@ -882,6 +882,7 @@ local-zone: "asianight.at." always_nxdomain
 local-zone: "asiapacificex.com." always_nxdomain
 local-zone: "asics-deutschland.com." always_nxdomain
 local-zone: "asics-schweiz.com." always_nxdomain
+local-zone: "asicsbotyeshop.cz." always_nxdomain
 local-zone: "asicsczechrepublic.cz." always_nxdomain
 local-zone: "asicsczeshop.cz." always_nxdomain
 local-zone: "asicsoutletosterreich.at." always_nxdomain
@@ -1845,7 +1846,6 @@ local-zone: "boho-and-chic.de." always_nxdomain
 local-zone: "bohoween.com." always_nxdomain
 local-zone: "boilingsmart.com." always_nxdomain
 local-zone: "boisdechauffage-express.com." always_nxdomain
-local-zone: "boisdechauffages-express.com." always_nxdomain
 local-zone: "boisylva.com." always_nxdomain
 local-zone: "bokerknife.com." always_nxdomain
 local-zone: "boldano.de." always_nxdomain
@@ -2078,7 +2078,6 @@ local-zone: "bstses.com." always_nxdomain
 local-zone: "btc-convert.com." always_nxdomain
 local-zone: "btc-markets.com." always_nxdomain
 local-zone: "nz04bg.btc-sys.com." always_nxdomain
-local-zone: "btc9339.com." always_nxdomain
 local-zone: "btceu.pro." always_nxdomain
 local-zone: "btcmarketcap.com." always_nxdomain
 local-zone: "btcprofitnow.com." always_nxdomain
@@ -2838,7 +2837,6 @@ local-zone: "trustinvestment.co.uk." always_nxdomain
 local-zone: "urhair.co.uk." always_nxdomain
 local-zone: "worldwidemoving.co.uk." always_nxdomain
 local-zone: "worldwidemoving.co.za." always_nxdomain
-local-zone: "coach-shopu.shop." always_nxdomain
 local-zone: "coarsesale.com." always_nxdomain
 local-zone: "coatfaith.com." always_nxdomain
 local-zone: "coborsdeyor.com." always_nxdomain
@@ -2893,6 +2891,7 @@ local-zone: "coinnery.com." always_nxdomain
 local-zone: "coinovest.com." always_nxdomain
 local-zone: "coinpaymentfx.com." always_nxdomain
 local-zone: "coinpool.me." always_nxdomain
+local-zone: "coinrevenue.life." always_nxdomain
 local-zone: "coinrevfx.com." always_nxdomain
 local-zone: "coinsdeskfx.com." always_nxdomain
 local-zone: "coinstic.com." always_nxdomain
@@ -3239,7 +3238,6 @@ local-zone: "cryptofa.online." always_nxdomain
 local-zone: "cryptofoxa.com." always_nxdomain
 local-zone: "cryptofundfx.com." always_nxdomain
 local-zone: "cryptofxaitrades.com." always_nxdomain
-local-zone: "cryptofxasset.trade." always_nxdomain
 local-zone: "cryptofxsfinance.com." always_nxdomain
 local-zone: "cryptogold.bz." always_nxdomain
 local-zone: "cryptogrizzly.com." always_nxdomain
@@ -5115,7 +5113,6 @@ local-zone: "elektriker.fink24.info." always_nxdomain
 local-zone: "finkerkette.de." always_nxdomain
 local-zone: "finlay.io." always_nxdomain
 local-zone: "finlibra.com." always_nxdomain
-local-zone: "finocapital.io." always_nxdomain
 local-zone: "finodax.com." always_nxdomain
 local-zone: "finomarkets.com." always_nxdomain
 local-zone: "finsainvestmentlimited.com." always_nxdomain
@@ -5979,7 +5976,6 @@ local-zone: "goldendood.shop." always_nxdomain
 local-zone: "goldenewelpen.com." always_nxdomain
 local-zone: "goldengoose.at." always_nxdomain
 local-zone: "goldengooseboty.cz." always_nxdomain
-local-zone: "goldenhawkgroup.com." always_nxdomain
 local-zone: "goldeninvestbroker.com." always_nxdomain
 local-zone: "goldenstockscapital.com." always_nxdomain
 local-zone: "goldf-tradex.com." always_nxdomain
@@ -6585,6 +6581,7 @@ local-zone: "hokaaustria.com." always_nxdomain
 local-zone: "hokaboty.cz." always_nxdomain
 local-zone: "hokaboutique.shop." always_nxdomain
 local-zone: "hokacenter.com." always_nxdomain
+local-zone: "hokacz.cz." always_nxdomain
 local-zone: "hokadeutschland.de." always_nxdomain
 local-zone: "hokalaufschuhe.at." always_nxdomain
 local-zone: "hokaone-run.co." always_nxdomain
@@ -8478,7 +8475,6 @@ local-zone: "maissner.de." always_nxdomain
 local-zone: "majortrade.co." always_nxdomain
 local-zone: "majucash.xyz." always_nxdomain
 local-zone: "makeazt.com." always_nxdomain
-local-zone: "makeglamfg.com." always_nxdomain
 local-zone: "makeupgeneric.com." always_nxdomain
 local-zone: "makeupproductsshop.store." always_nxdomain
 local-zone: "makitabillig.de." always_nxdomain
@@ -8632,7 +8628,6 @@ local-zone: "maxearningcryp.com." always_nxdomain
 local-zone: "maxgiftery.com." always_nxdomain
 local-zone: "maxiholky.cz." always_nxdomain
 local-zone: "maxisizend.com." always_nxdomain
-local-zone: "maxitrade.com." always_nxdomain
 local-zone: "maxivyprodeje.cz." always_nxdomain
 local-zone: "easdm.maxlaza.com." always_nxdomain
 local-zone: "maxlife-fundacja.pl." always_nxdomain
@@ -10652,7 +10647,6 @@ local-zone: "pillenhaus.de." always_nxdomain
 local-zone: "pillenpalast.com." always_nxdomain
 local-zone: "pillola-italia.com." always_nxdomain
 local-zone: "pillowcases.space." always_nxdomain
-local-zone: "pills-cheap-sale.com." always_nxdomain
 local-zone: "pillstock.net." always_nxdomain
 local-zone: "pillz888.org." always_nxdomain
 local-zone: "pilotgain.com." always_nxdomain
@@ -10671,7 +10665,6 @@ local-zone: "pinkblushshop.com." always_nxdomain
 local-zone: "pinkkola.com." always_nxdomain
 local-zone: "pinkmegan.com." always_nxdomain
 local-zone: "pinkmemoriess.com." always_nxdomain
-local-zone: "pinkni.com." always_nxdomain
 local-zone: "pinnarts.com." always_nxdomain
 local-zone: "pinoplay.de." always_nxdomain
 local-zone: "pinotsale.shop." always_nxdomain
@@ -10870,7 +10863,6 @@ local-zone: "pr-investissements.com." always_nxdomain
 local-zone: "pr-ruehle.de." always_nxdomain
 local-zone: "practicalstores.com." always_nxdomain
 local-zone: "pradler-media.com." always_nxdomain
-local-zone: "pragueactivators.cz." always_nxdomain
 local-zone: "praiseglories.info." always_nxdomain
 local-zone: "prbcapitals.com." always_nxdomain
 local-zone: "precless.top." always_nxdomain
@@ -10914,9 +10906,7 @@ local-zone: "prideearthdesign.com." always_nxdomain
 local-zone: "prideearthone.com." always_nxdomain
 local-zone: "prigaudited.buzz." always_nxdomain
 local-zone: "primada.de." always_nxdomain
-local-zone: "primavergleich.de." always_nxdomain
 local-zone: "prime-autopack.com." always_nxdomain
-local-zone: "prime-coin.live." always_nxdomain
 local-zone: "prime-market.com." always_nxdomain
 local-zone: "prime-smog.com." always_nxdomain
 local-zone: "primebit-profit.org." always_nxdomain
@@ -11082,6 +11072,7 @@ local-zone: "together.purecap.xyz." always_nxdomain
 local-zone: "unless.purecap.xyz." always_nxdomain
 local-zone: "purelywave.com." always_nxdomain
 local-zone: "pureoiuo.com." always_nxdomain
+local-zone: "puresuit.shop." always_nxdomain
 local-zone: "purprints.net." always_nxdomain
 local-zone: "apothekerezeptfrei-1.puzl.com." always_nxdomain
 local-zone: "pv-norden.shop." always_nxdomain
@@ -11201,7 +11192,6 @@ local-zone: "rabattschuh.com." always_nxdomain
 local-zone: "rabattsender.com." always_nxdomain
 local-zone: "rabattski.com." always_nxdomain
 local-zone: "rabattskide.com." always_nxdomain
-local-zone: "rabattskis.de." always_nxdomain
 local-zone: "rabattskisde.com." always_nxdomain
 local-zone: "rabattsport.de." always_nxdomain
 local-zone: "rabattsportbekleidung.com." always_nxdomain
@@ -11622,7 +11612,6 @@ local-zone: "rjkrdjb.store." always_nxdomain
 local-zone: "rkase.com." always_nxdomain
 local-zone: "rkorteo.com." always_nxdomain
 local-zone: "rmied.com." always_nxdomain
-local-zone: "rmotoboris.com." always_nxdomain
 local-zone: "rmtechshop.com." always_nxdomain
 local-zone: "rnchrw.com." always_nxdomain
 local-zone: "rnexcellent.com." always_nxdomain
@@ -11833,7 +11822,6 @@ local-zone: "sairloy.shop." always_nxdomain
 local-zone: "sakacomputer.de." always_nxdomain
 local-zone: "sakaziq.com." always_nxdomain
 local-zone: "sakimag.com." always_nxdomain
-local-zone: "sakurainu.org." always_nxdomain
 local-zone: "salanza-berlin.de." always_nxdomain
 local-zone: "salcouth.com." always_nxdomain
 local-zone: "sale-boating.com." always_nxdomain
@@ -12000,6 +11988,7 @@ local-zone: "saturn-game.de." always_nxdomain
 local-zone: "saturn-markt.com." always_nxdomain
 local-zone: "saturn-s.de." always_nxdomain
 local-zone: "sauconyaustria.at." always_nxdomain
+local-zone: "sauconyczechrepublic.cz." always_nxdomain
 local-zone: "sauconylaufschuhe.at." always_nxdomain
 local-zone: "sauconyschuhe.de." always_nxdomain
 local-zone: "sauconyshoe.com." always_nxdomain
@@ -12086,7 +12075,6 @@ local-zone: "schotz.cz." always_nxdomain
 local-zone: "schradearea.com." always_nxdomain
 local-zone: "schrank-shop.com." always_nxdomain
 local-zone: "schreiner-rasenmaher.com." always_nxdomain
-local-zone: "schuhe-store.com." always_nxdomain
 local-zone: "schuhebullboxer.de." always_nxdomain
 local-zone: "schuheclarks.de." always_nxdomain
 local-zone: "schuhepaulgreen.de." always_nxdomain
@@ -12137,7 +12125,6 @@ local-zone: "sebastiankoth.de." always_nxdomain
 local-zone: "secotab.shop." always_nxdomain
 local-zone: "secrettowin.com." always_nxdomain
 local-zone: "securebellonline.com." always_nxdomain
-local-zone: "securecorpmafsplc.com." always_nxdomain
 local-zone: "securefasttrade.com." always_nxdomain
 local-zone: "securejust.com." always_nxdomain
 local-zone: "securesmartoptions.online." always_nxdomain
@@ -12155,7 +12142,6 @@ local-zone: "seghet.com." always_nxdomain
 local-zone: "sehaleservices.com." always_nxdomain
 local-zone: "sehen-staunen-erleben.de." always_nxdomain
 local-zone: "seifenstaender.at." always_nxdomain
-local-zone: "seigneurin.fr." always_nxdomain
 local-zone: "seijin.de." always_nxdomain
 local-zone: "seiltanzer.com." always_nxdomain
 local-zone: "seiteeintragen.com." always_nxdomain
@@ -12189,7 +12175,6 @@ local-zone: "senlann.com." always_nxdomain
 local-zone: "senmiss.com." always_nxdomain
 local-zone: "sensefums.com." always_nxdomain
 local-zone: "senseila.de." always_nxdomain
-local-zone: "sensetrade.cc." always_nxdomain
 local-zone: "sensualsale.com." always_nxdomain
 local-zone: "sentees.com." always_nxdomain
 local-zone: "sentencethy.com." always_nxdomain
@@ -12224,7 +12209,6 @@ local-zone: "setfahrradtrikot.com." always_nxdomain
 local-zone: "setyours.com." always_nxdomain
 local-zone: "sevengatesconsulting.de." always_nxdomain
 local-zone: "sevranmoove.fr." always_nxdomain
-local-zone: "sewakanmiu.com." always_nxdomain
 local-zone: "sewingiiseasy.com." always_nxdomain
 local-zone: "sewlt.com." always_nxdomain
 local-zone: "sexapotheke24.com." always_nxdomain
@@ -12803,7 +12787,6 @@ local-zone: "spielmobil-ottocar.de." always_nxdomain
 local-zone: "spielsachen-paradies.de." always_nxdomain
 local-zone: "spielwarenneu.de." always_nxdomain
 local-zone: "spielzeug-kaufen.net." always_nxdomain
-local-zone: "spielzeugdisney.de." always_nxdomain
 local-zone: "spilavizer.com." always_nxdomain
 local-zone: "spinevo.com." always_nxdomain
 local-zone: "spiralhappy.com." always_nxdomain
@@ -12834,7 +12817,6 @@ local-zone: "sporthome19.com." always_nxdomain
 local-zone: "sporthotel-schwerin.de." always_nxdomain
 local-zone: "sportingstore.shop." always_nxdomain
 local-zone: "sportmediterran.at." always_nxdomain
-local-zone: "sportmitbauch.de." always_nxdomain
 local-zone: "sportmodemarken.com." always_nxdomain
 local-zone: "sportnewsdirect.com." always_nxdomain
 local-zone: "sports-discount.net." always_nxdomain
@@ -12913,7 +12895,6 @@ local-zone: "starapotheke.com." always_nxdomain
 local-zone: "starherobit.com." always_nxdomain
 local-zone: "starkuvdum.cz." always_nxdomain
 local-zone: "starling-bonds.com." always_nxdomain
-local-zone: "starlingcredit.com." always_nxdomain
 local-zone: "startuplatte.com." always_nxdomain
 local-zone: "startx.at." always_nxdomain
 local-zone: "starwarslover.com." always_nxdomain
@@ -12954,7 +12935,6 @@ local-zone: "sterback.com." always_nxdomain
 local-zone: "stereoswitch.de." always_nxdomain
 local-zone: "sterling-investment.ltd." always_nxdomain
 local-zone: "sternestd.de." always_nxdomain
-local-zone: "sterninvest.de." always_nxdomain
 local-zone: "sternmarkets.com." always_nxdomain
 local-zone: "sternoptions.com." always_nxdomain
 local-zone: "steroide-kaufen.com." always_nxdomain
@@ -12962,7 +12942,6 @@ local-zone: "steroidemeister.com." always_nxdomain
 local-zone: "steroidhaus.net." always_nxdomain
 local-zone: "steroidspeicher.de." always_nxdomain
 local-zone: "sterroll.com." always_nxdomain
-local-zone: "steuerfrei-shoppen.com." always_nxdomain
 local-zone: "stevenjenks.com." always_nxdomain
 local-zone: "stickerify.co." always_nxdomain
 local-zone: "stickersbomber.com." always_nxdomain
@@ -13049,7 +13028,6 @@ local-zone: "storeoregononline.com." always_nxdomain
 local-zone: "storeoutdoorus.com." always_nxdomain
 local-zone: "storepetsafe.com." always_nxdomain
 local-zone: "storesalewa.com." always_nxdomain
-local-zone: "storeschoolbag.com." always_nxdomain
 local-zone: "storeskiwear.com." always_nxdomain
 local-zone: "storesnowsports.com." always_nxdomain
 local-zone: "shopsale.storesonline2022.ru." always_nxdomain
@@ -13516,7 +13494,6 @@ local-zone: "termink.com." always_nxdomain
 local-zone: "ternsome.top." always_nxdomain
 local-zone: "terra.one." always_nxdomain
 local-zone: "terra-finance.cc." always_nxdomain
-local-zone: "terra-finance.co." always_nxdomain
 local-zone: "terrifestival.shop." always_nxdomain
 local-zone: "terrific.de." always_nxdomain
 local-zone: "terryjewelry.shop." always_nxdomain
@@ -13527,6 +13504,7 @@ local-zone: "tes-ic.cloud." always_nxdomain
 local-zone: "tesauree.com." always_nxdomain
 local-zone: "tesento.com." always_nxdomain
 local-zone: "tesla-for-doge.com." always_nxdomain
+local-zone: "tesla-openai.com." always_nxdomain
 local-zone: "teslabestfor.com." always_nxdomain
 local-zone: "teslabounce.com." always_nxdomain
 local-zone: "teslabrc.com." always_nxdomain
@@ -13688,7 +13666,6 @@ local-zone: "theoutdoorsgear.com." always_nxdomain
 local-zone: "theoutdoortool.com." always_nxdomain
 local-zone: "theownshop.com." always_nxdomain
 local-zone: "thepeppymay.com." always_nxdomain
-local-zone: "thephones.net." always_nxdomain
 local-zone: "theplushies.shop." always_nxdomain
 local-zone: "thepocketknives.com." always_nxdomain
 local-zone: "thepoloshirt.store." always_nxdomain
@@ -13980,7 +13957,6 @@ local-zone: "toptencoin.com." always_nxdomain
 local-zone: "toptrade500.com." always_nxdomain
 local-zone: "toptradepro.com." always_nxdomain
 local-zone: "topvaly.com." always_nxdomain
-local-zone: "topvcashoffer.com." always_nxdomain
 local-zone: "topvision-cz.com." always_nxdomain
 local-zone: "topwinebar.com." always_nxdomain
 local-zone: "topyieldoptions.online." always_nxdomain
@@ -15033,7 +15009,6 @@ local-zone: "waresmergechic.com." always_nxdomain
 local-zone: "waresnewbike.com." always_nxdomain
 local-zone: "waresnewfad.com." always_nxdomain
 local-zone: "waresusmiss.com." always_nxdomain
-local-zone: "warmclo.com." always_nxdomain
 local-zone: "warmhalten.com." always_nxdomain
 local-zone: "warminsun.com." always_nxdomain
 local-zone: "warmwool.de." always_nxdomain
