--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 26 Jun 2023 21:24 UTC
-# Version: 2023.0626.2124.20
+# Last modified: 28 Jun 2023 21:07 UTC
+# Version: 2023.0628.2107.19
 # Syntax: Unbound
-# Number of entries: 6843
+# Number of entries: 6844
 #
 server:
 local-zone: "zer0day.000webhostapp.com." always_nxdomain
@@ -3824,6 +3824,7 @@ local-zone: "mytorrent.tv." always_nxdomain
 local-zone: "mytracker.ru." always_nxdomain
 local-zone: "myunblock.com." always_nxdomain
 local-zone: "myustv.com." always_nxdomain
+local-zone: "rfc5746.mywaifu.best." always_nxdomain
 local-zone: "tracker.mywaifu.best." always_nxdomain
 local-zone: "adminion.n-blade.ru." always_nxdomain
 local-zone: "nabtor.com." always_nxdomain
