update native tracker

--- a/unbound/native.huawei.blacklist.conf
+++ b/unbound/native.huawei.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 23 Jun 2023 21:57 UTC
-# Version: 2023.0623.2157.53
+# Last modified: 28 Jun 2023 21:12 UTC
+# Version: 2023.0628.2112.19
 # Syntax: Unbound
-# Number of entries: 62
+# Number of entries: 63
 #
 server:
 local-zone: "ubacollect-drcn.cloud.dbankcloud.cn." always_nxdomain
@@ -30,6 +30,7 @@ local-zone: "metrics5.dt.dbankcloud.ru." always_nxdomain
 local-zone: "grs.dbankcloud.asia." always_nxdomain
 local-zone: "grs.dbankcloud.cn." always_nxdomain
 local-zone: "grs.dbankcloud.com." always_nxdomain
+local-zone: "grs.dbankcloud.eu." always_nxdomain
 local-zone: "adx-dra.op.dbankcloud.com." always_nxdomain
 local-zone: "adx-drcn.op.dbankcloud.cn." always_nxdomain
 local-zone: "adx-dre.op.dbankcloud.com." always_nxdomain
