--- a/unbound/fake.blacklist.conf
+++ b/unbound/fake.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 27 Jun 2023 21:17 UTC
-# Version: 2023.0627.2117.53
+# Last modified: 28 Jun 2023 21:14 UTC
+# Version: 2023.0628.2114.15
 # Syntax: Unbound
-# Number of entries: 15715
+# Number of entries: 15728
 #
 server:
 local-zone: "009972.com." always_nxdomain
@@ -1544,6 +1544,7 @@ local-zone: "bijouxneu.space." always_nxdomain
 local-zone: "bike-hagers.de." always_nxdomain
 local-zone: "bike-poc.com." always_nxdomain
 local-zone: "bike-shop-market.com." always_nxdomain
+local-zone: "bikeaccessoriesneu.com." always_nxdomain
 local-zone: "bikeblitz.de." always_nxdomain
 local-zone: "bikeexploiter.com." always_nxdomain
 local-zone: "bikefamily-gmbh.de." always_nxdomain
@@ -2078,6 +2079,7 @@ local-zone: "bstses.com." always_nxdomain
 local-zone: "btc-convert.com." always_nxdomain
 local-zone: "btc-markets.com." always_nxdomain
 local-zone: "nz04bg.btc-sys.com." always_nxdomain
+local-zone: "btc9339.com." always_nxdomain
 local-zone: "btceu.pro." always_nxdomain
 local-zone: "btcmarketcap.com." always_nxdomain
 local-zone: "btcprofitnow.com." always_nxdomain
@@ -3782,7 +3784,6 @@ local-zone: "discount-kobalt.com." always_nxdomain
 local-zone: "discount-zigaretten24.com." always_nxdomain
 local-zone: "discountaarrivals.com." always_nxdomain
 local-zone: "discountapparels.store." always_nxdomain
-local-zone: "discountbloc.ru." always_nxdomain
 local-zone: "discountcamph.store." always_nxdomain
 local-zone: "discountcamph.website." always_nxdomain
 local-zone: "discountcat.website." always_nxdomain
@@ -4534,6 +4535,7 @@ local-zone: "esdxsa.com." always_nxdomain
 local-zone: "esgehtauchohnerezept.net." always_nxdomain
 local-zone: "eshoesoutlet.com." always_nxdomain
 local-zone: "eshopie.cz." always_nxdomain
+local-zone: "esl-gaming.com." always_nxdomain
 local-zone: "esmart-invest.com." always_nxdomain
 local-zone: "esoftn.shop." always_nxdomain
 local-zone: "espace-cluny.com." always_nxdomain
@@ -4796,6 +4798,7 @@ local-zone: "fahrradsportverkauf.com." always_nxdomain
 local-zone: "fahrraduniversum.de." always_nxdomain
 local-zone: "fahrradvitus.de." always_nxdomain
 local-zone: "fahrradzubehorrabatt.com." always_nxdomain
+local-zone: "fahrschulagenten.de." always_nxdomain
 local-zone: "fahrschule-seefeldt.de." always_nxdomain
 local-zone: "fahrzeugprada.de." always_nxdomain
 local-zone: "failux.com." always_nxdomain
@@ -5343,7 +5346,6 @@ local-zone: "foxflix.de." always_nxdomain
 local-zone: "foxislandembroidery.com." always_nxdomain
 local-zone: "foxnewstrade.org." always_nxdomain
 local-zone: "foxrm.fr." always_nxdomain
-local-zone: "foxyteam.com." always_nxdomain
 local-zone: "fpbulls.com." always_nxdomain
 local-zone: "fpilahue.com." always_nxdomain
 local-zone: "fr-energie-bois.com." always_nxdomain
@@ -6073,6 +6075,7 @@ local-zone: "grasshail.com." always_nxdomain
 local-zone: "gratamodels.com." always_nxdomain
 local-zone: "gratis-produkttests.de." always_nxdomain
 local-zone: "gratisdsl.at." always_nxdomain
+local-zone: "graveilux.de." always_nxdomain
 local-zone: "great-mysteries.com." always_nxdomain
 local-zone: "greatescapery.com." always_nxdomain
 local-zone: "greatest-shop.com." always_nxdomain
@@ -6539,6 +6542,7 @@ local-zone: "hitstockfx.org." always_nxdomain
 local-zone: "hivintage.com." always_nxdomain
 local-zone: "hizmetkurdi.com." always_nxdomain
 local-zone: "hk6986.com." always_nxdomain
+local-zone: "hkaf-dienst.com." always_nxdomain
 local-zone: "hkk.io." always_nxdomain
 local-zone: "hklaccessoriesstore.com." always_nxdomain
 local-zone: "hkls.at." always_nxdomain
@@ -7507,13 +7511,16 @@ local-zone: "kedsosterreich.com." always_nxdomain
 local-zone: "kedsschuhe.de." always_nxdomain
 local-zone: "kedsschuhes.com." always_nxdomain
 local-zone: "keen-cz.com." always_nxdomain
+local-zone: "keen-ireland.com." always_nxdomain
 local-zone: "keenfootwearsale.com." always_nxdomain
+local-zone: "keenireland.com." always_nxdomain
 local-zone: "keenobuv.cz." always_nxdomain
 local-zone: "keenosterreich.at." always_nxdomain
 local-zone: "keenschuhe.at." always_nxdomain
 local-zone: "keenschuhe.com." always_nxdomain
 local-zone: "keenschuhewien.at." always_nxdomain
 local-zone: "keenschuhewien.com." always_nxdomain
+local-zone: "keenshoeslreland.com." always_nxdomain
 local-zone: "keepeoff.shop." always_nxdomain
 local-zone: "keeprake.com." always_nxdomain
 local-zone: "keesocial.com." always_nxdomain
@@ -7724,6 +7731,7 @@ local-zone: "kokokostore.net." always_nxdomain
 local-zone: "kokosoel-zaehne.de." always_nxdomain
 local-zone: "kolendo.de." always_nxdomain
 local-zone: "komarise.com." always_nxdomain
+local-zone: "komarniskiw.shop." always_nxdomain
 local-zone: "komforteinrichter.de." always_nxdomain
 local-zone: "kommodende.com." always_nxdomain
 local-zone: "kompens.de." always_nxdomain
@@ -7929,10 +7937,16 @@ local-zone: "lashoven.com." always_nxdomain
 local-zone: "lashup.us." always_nxdomain
 local-zone: "lasmpo.com." always_nxdomain
 local-zone: "laspop.top." always_nxdomain
+local-zone: "lasporitiva.com." always_nxdomain
+local-zone: "lasport.top." always_nxdomain
 local-zone: "lasportiva.club." always_nxdomain
 local-zone: "lasportivaat.at." always_nxdomain
+local-zone: "lasportivade.club." always_nxdomain
 local-zone: "lasportivadeutschland.de." always_nxdomain
+local-zone: "lasportivaonl.cc." always_nxdomain
 local-zone: "lasportivaosterreich.at." always_nxdomain
+local-zone: "lasportivaotdeur.top." always_nxdomain
+local-zone: "lasportivaoutlet.club." always_nxdomain
 local-zone: "lasportivaschuhe.at." always_nxdomain
 local-zone: "lasportivast.com." always_nxdomain
 local-zone: "lasportivasuomi.com." always_nxdomain
@@ -8335,7 +8349,6 @@ local-zone: "lucialamps.shop." always_nxdomain
 local-zone: "lucidtiger.com." always_nxdomain
 local-zone: "lucimen.com." always_nxdomain
 local-zone: "lucklby.com." always_nxdomain
-local-zone: "luckmoons.com." always_nxdomain
 local-zone: "lucknocker.com." always_nxdomain
 local-zone: "luckycafe.store." always_nxdomain
 local-zone: "luckydaybet99.com." always_nxdomain
@@ -8565,6 +8578,7 @@ local-zone: "marktpro.de." always_nxdomain
 local-zone: "markus-mendler.de." always_nxdomain
 local-zone: "markusbrandstetter.at." always_nxdomain
 local-zone: "marleytecnologica.com." always_nxdomain
+local-zone: "marmilano.de." always_nxdomain
 local-zone: "marocdevt.com." always_nxdomain
 local-zone: "maronnami-shop.com." always_nxdomain
 local-zone: "marotan.de." always_nxdomain
@@ -8796,6 +8810,8 @@ local-zone: "melarus.store." always_nxdomain
 local-zone: "meldebescheinigung.eu." always_nxdomain
 local-zone: "meli.games." always_nxdomain
 local-zone: "melioratelimited.com." always_nxdomain
+local-zone: "melissaosterreich.at." always_nxdomain
+local-zone: "melissaschuhe.de." always_nxdomain
 local-zone: "melizamodesty.com." always_nxdomain
 local-zone: "melkberg.de." always_nxdomain
 local-zone: "melodybaby.shop." always_nxdomain
@@ -9025,10 +9041,10 @@ local-zone: "mmarketing.cz." always_nxdomain
 local-zone: "mmfinancialexperts.com." always_nxdomain
 local-zone: "mmfit.eu." always_nxdomain
 local-zone: "mmmjemp.cn." always_nxdomain
-local-zone: "mmoutlet.store." always_nxdomain
 local-zone: "mnaink.com." always_nxdomain
 local-zone: "mnoramemeti.com." always_nxdomain
 local-zone: "mnotina.com." always_nxdomain
+local-zone: "mnswellness.com." always_nxdomain
 local-zone: "mobelgeschaft-neu.com." always_nxdomain
 local-zone: "mobiamy.com." always_nxdomain
 local-zone: "mobiflix.de." always_nxdomain
@@ -9488,6 +9504,7 @@ local-zone: "nebelski.pl." always_nxdomain
 local-zone: "nebulanights.com." always_nxdomain
 local-zone: "nebulosity.shop." always_nxdomain
 local-zone: "neefx.com." always_nxdomain
+local-zone: "neepage.com." always_nxdomain
 local-zone: "neespresso.coffee." always_nxdomain
 local-zone: "negotiatefoam.cn." always_nxdomain
 local-zone: "rspmoyu.neilriser.com." always_nxdomain
@@ -9759,6 +9776,7 @@ local-zone: "nobullosterreich.at." always_nxdomain
 local-zone: "nobullosterreich.com." always_nxdomain
 local-zone: "nobullsalewien.me." always_nxdomain
 local-zone: "nobullwien.at." always_nxdomain
+local-zone: "nobullworld.shop." always_nxdomain
 local-zone: "nobulosterreich.me." always_nxdomain
 local-zone: "nofotballshop.com." always_nxdomain
 local-zone: "nofotballstore.com." always_nxdomain
@@ -10102,6 +10120,7 @@ local-zone: "shop6.onlinesale2022.ru." always_nxdomain
 local-zone: "shop8.onlinesale2022.ru." always_nxdomain
 local-zone: "onlinesgeldverdienens.com." always_nxdomain
 local-zone: "onlinesimplfx.com." always_nxdomain
+local-zone: "eoutlet.onlinestore2023.com." always_nxdomain
 local-zone: "cheaper.onlinestoresoutlet2021.ru." always_nxdomain
 local-zone: "onlineumage.com." always_nxdomain
 local-zone: "onlineussports.com." always_nxdomain
@@ -12692,6 +12711,7 @@ local-zone: "somatesav.com." always_nxdomain
 local-zone: "someacy.com." always_nxdomain
 local-zone: "somegifts4u.com." always_nxdomain
 local-zone: "somegifts4you.com." always_nxdomain
+local-zone: "sommer-angebote.com." always_nxdomain
 local-zone: "sommeraufdemland.de." always_nxdomain
 local-zone: "sommerbiene.de." always_nxdomain
 local-zone: "sommerekzem.at." always_nxdomain
@@ -12750,6 +12770,7 @@ local-zone: "spar-markt.de." always_nxdomain
 local-zone: "sparka-tan.info." always_nxdomain
 local-zone: "sparkauf24.com." always_nxdomain
 local-zone: "sparkprofit.com." always_nxdomain
+local-zone: "sparprime.com." always_nxdomain
 local-zone: "spartan-trade.com." always_nxdomain
 local-zone: "speaktt.top." always_nxdomain
 local-zone: "special-gift.it." always_nxdomain
@@ -12773,6 +12794,7 @@ local-zone: "speedtradefx.com." always_nxdomain
 local-zone: "speer-muc.de." always_nxdomain
 local-zone: "speer-office.com." always_nxdomain
 local-zone: "speicherprada.de." always_nxdomain
+local-zone: "spenpek.shop." always_nxdomain
 local-zone: "sperry-deutschland.com." always_nxdomain
 local-zone: "sperrybootsschuhe.com." always_nxdomain
 local-zone: "sperrybootsschuhe.de." always_nxdomain
@@ -13374,7 +13396,6 @@ local-zone: "tayamacctv.com." always_nxdomain
 local-zone: "taylorsales.shop." always_nxdomain
 local-zone: "tazemalls.com." always_nxdomain
 local-zone: "tazreiter-holz.at." always_nxdomain
-local-zone: "tbg-lmtd.com." always_nxdomain
 local-zone: "crm2.tbg-lmtd.xyz." always_nxdomain
 local-zone: "trade.tccrypto.io." always_nxdomain
 local-zone: "tcgguard.com." always_nxdomain
@@ -13829,6 +13850,7 @@ local-zone: "paderborn.tm5-ag.com." always_nxdomain
 local-zone: "tmallprints.com." always_nxdomain
 local-zone: "tmcsale.net." always_nxdomain
 local-zone: "tmnwrt.com." always_nxdomain
+local-zone: "lasportiva.tn.it." always_nxdomain
 local-zone: "origin.tnail.cc." always_nxdomain
 local-zone: "tnewslite.com." always_nxdomain
 local-zone: "tnewsrefresh.com." always_nxdomain
@@ -13909,6 +13931,7 @@ local-zone: "toolsuperior.com." always_nxdomain
 local-zone: "toolsuperus.com." always_nxdomain
 local-zone: "toolswiha.com." always_nxdomain
 local-zone: "toolswilton.com." always_nxdomain
+local-zone: "tooltoall.com." always_nxdomain
 local-zone: "toonix.store." always_nxdomain
 local-zone: "tooshler.us." always_nxdomain
 local-zone: "top-apotheke.at." always_nxdomain
@@ -14030,8 +14053,6 @@ local-zone: "trademiningfx.com." always_nxdomain
 local-zone: "trademote.com." always_nxdomain
 local-zone: "tradenix.io." always_nxdomain
 local-zone: "tradeo.com." always_nxdomain
-local-zone: "tradeofx.com." always_nxdomain
-local-zone: "tradeolympic.com." always_nxdomain
 local-zone: "tradeprincipal.com." always_nxdomain
 local-zone: "tradeprofitweb.com." always_nxdomain
 local-zone: "traderce.com." always_nxdomain
@@ -14196,6 +14217,7 @@ local-zone: "trustedrxsolutions.com." always_nxdomain
 local-zone: "trustedtablets.online." always_nxdomain
 local-zone: "trustfinancetrading.com." always_nxdomain
 local-zone: "trustfundfx.tech." always_nxdomain
+local-zone: "trustmailexpress.com." always_nxdomain
 local-zone: "trustmerchantcooperativebank.net." always_nxdomain
 local-zone: "trustpharm7pills.com." always_nxdomain
 local-zone: "trustss.com." always_nxdomain
@@ -14248,6 +14270,7 @@ local-zone: "tunepart.com." always_nxdomain
 local-zone: "turanostre.de." always_nxdomain
 local-zone: "turanzar-reifen.com." always_nxdomain
 local-zone: "turboate.com." always_nxdomain
+local-zone: "turbojust.com." always_nxdomain
 local-zone: "turbopb.com." always_nxdomain
 local-zone: "turbotzy.com." always_nxdomain
 local-zone: "turfdecor.com." always_nxdomain
@@ -14307,7 +14330,6 @@ local-zone: "udsaey.online." always_nxdomain
 local-zone: "ueeeuer.com." always_nxdomain
 local-zone: "ueisley.online." always_nxdomain
 local-zone: "uesthermaina.shop." always_nxdomain
-local-zone: "ueximious.com." always_nxdomain
 local-zone: "ufd-lindenau.de." always_nxdomain
 local-zone: "ufolepbourgogne.org." always_nxdomain
 local-zone: "ugeman.com." always_nxdomain
@@ -14321,6 +14343,7 @@ local-zone: "uhrsprung-bar.at." always_nxdomain
 local-zone: "uhrstern.net." always_nxdomain
 local-zone: "uifami.com." always_nxdomain
 local-zone: "uinoqclothing.shop." always_nxdomain
+local-zone: "adidasuk.uk.com." always_nxdomain
 local-zone: "adidasyeezy.uk.com." always_nxdomain
 local-zone: "attiora.uk.com." always_nxdomain
 local-zone: "bestnikekickssale.uk.com." always_nxdomain
@@ -14500,7 +14523,6 @@ local-zone: "usaoutdoorfootwear.com." always_nxdomain
 local-zone: "usaoutdoorwear.com." always_nxdomain
 local-zone: "usapharmashop.online." always_nxdomain
 local-zone: "usapill24hours.com." always_nxdomain
-local-zone: "usapparelabout.com." always_nxdomain
 local-zone: "usapparelaccessories.org." always_nxdomain
 local-zone: "usarmy-store.de." always_nxdomain
 local-zone: "usashimano.com." always_nxdomain
@@ -14572,7 +14594,6 @@ local-zone: "uswearmens.com." always_nxdomain
 local-zone: "uswesternaccessories.com." always_nxdomain
 local-zone: "uswomenshoe.com." always_nxdomain
 local-zone: "usyya.com." always_nxdomain
-local-zone: "utangwiki.com." always_nxdomain
 local-zone: "uttasheilerpraxis.de." always_nxdomain
 local-zone: "uuniqueo.com." always_nxdomain
 local-zone: "uvh-apotheke.de." always_nxdomain
@@ -14718,7 +14739,6 @@ local-zone: "versandpharma.com." always_nxdomain
 local-zone: "verssivo.com." always_nxdomain
 local-zone: "vertix.tech." always_nxdomain
 local-zone: "verysmartshop.com." always_nxdomain
-local-zone: "veryuseful.ml." always_nxdomain
 local-zone: "veryvoga.com." always_nxdomain
 local-zone: "verzech.com." always_nxdomain
 local-zone: "vesinhhoatam.com." always_nxdomain
@@ -14768,11 +14788,9 @@ local-zone: "vignettetschechien.de." always_nxdomain
 local-zone: "vigor-book.com." always_nxdomain
 local-zone: "viknok.top." always_nxdomain
 local-zone: "vikosiwelpen.com." always_nxdomain
-local-zone: "vilicus.solar." always_nxdomain
 local-zone: "villa-pegasus.de." always_nxdomain
 local-zone: "villafroschkoenig.de." always_nxdomain
 local-zone: "vincentteh.com." always_nxdomain
-local-zone: "vincenzosantoriello.it." always_nxdomain
 local-zone: "vindon.de." always_nxdomain
 local-zone: "vinisay.com." always_nxdomain
 local-zone: "vinissage.de." always_nxdomain
@@ -15144,7 +15162,6 @@ local-zone: "wenpowertools.com." always_nxdomain
 local-zone: "wenta-elektro.com." always_nxdomain
 local-zone: "wenuse.com." always_nxdomain
 local-zone: "werbungansbach.de." always_nxdomain
-local-zone: "werdenbank.com." always_nxdomain
 local-zone: "werfew.com." always_nxdomain
 local-zone: "werino.de." always_nxdomain
 local-zone: "werisee.com." always_nxdomain
@@ -15428,12 +15445,10 @@ local-zone: "xl-1.de." always_nxdomain
 local-zone: "xmarkets.com." always_nxdomain
 local-zone: "xmforexbroker.com." always_nxdomain
 local-zone: "xmginvest.com." always_nxdomain
-local-zone: "xmsite-coin.com." always_nxdomain
 local-zone: "xn--goldbank-mnchen-8vb.de." always_nxdomain
 local-zone: "xn--parfm-probe-whb.de." always_nxdomain
 local-zone: "xn--polenbller-jcb.net." always_nxdomain
 local-zone: "xn--salomonsterreich-swb.at." always_nxdomain
-local-zone: "xnurulwp.com." always_nxdomain
 local-zone: "xnvest.com." always_nxdomain
 local-zone: "xo-trier.de." always_nxdomain
 local-zone: "xoespace.com." always_nxdomain
@@ -15589,7 +15604,6 @@ local-zone: "zawmyohtut.com." always_nxdomain
 local-zone: "zaysolisx.com." always_nxdomain
 local-zone: "zazadill.com." always_nxdomain
 local-zone: "zazestore.com." always_nxdomain
-local-zone: "zblogzilla.com." always_nxdomain
 local-zone: "zbozxe.shop." always_nxdomain
 local-zone: "zbynek-kohout.cz." always_nxdomain
 local-zone: "zdcome.top." always_nxdomain
@@ -15629,7 +15643,6 @@ local-zone: "zetbull.biz." always_nxdomain
 local-zone: "zetko-waren.com." always_nxdomain
 local-zone: "zetko-waren.de." always_nxdomain
 local-zone: "app.zety.de." always_nxdomain
-local-zone: "zetzethaustechnik.de." always_nxdomain
 local-zone: "zevamia.com." always_nxdomain
 local-zone: "zewahot.com." always_nxdomain
 local-zone: "zeynoa.de." always_nxdomain
