update anti piracy

--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,8 +3,8 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 28 Jun 2023 21:07 UTC
-# Version: 2023.0628.2107.19
+# Last modified: 29 Jun 2023 21:11 UTC
+# Version: 2023.0629.2111.18
 # Syntax: Unbound
 # Number of entries: 6844
 #
@@ -5096,6 +5096,7 @@ local-zone: "showbox-movies.net." always_nxdomain
 local-zone: "showboxmovies.net." always_nxdomain
 local-zone: "showrss.info." always_nxdomain
 local-zone: "showtimebd.com." always_nxdomain
+local-zone: "shubt.net." always_nxdomain
 local-zone: "tracker.shuntv.net." always_nxdomain
 local-zone: "shush.se." always_nxdomain
 local-zone: "siambit.com." always_nxdomain
@@ -5754,7 +5755,6 @@ local-zone: "torrentarsivi.com." always_nxdomain
 local-zone: "torrentazos.com." always_nxdomain
 local-zone: "torrentbay.to." always_nxdomain
 local-zone: "torrentbd.com." always_nxdomain
-local-zone: "torrentbd.net." always_nxdomain
 local-zone: "torrentbit.net." always_nxdomain
 local-zone: "torrentbits.ro." always_nxdomain
 local-zone: "torrentbox.com." always_nxdomain
