--- a/unbound/native.tiktok.blacklist.conf
+++ b/unbound/native.tiktok.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 26 Jun 2023 21:30 UTC
-# Version: 2023.0626.2130.43
+# Last modified: 29 Jun 2023 21:17 UTC
+# Version: 2023.0629.2117.06
 # Syntax: Unbound
-# Number of entries: 176
+# Number of entries: 181
 #
 server:
 local-zone: "gpm-mon-sg.byteoversea.com." always_nxdomain
@@ -20,10 +20,6 @@ local-zone: "mon.byteoversea.com." always_nxdomain
 local-zone: "mon-csj-maliva-ios.byteoversea.com." always_nxdomain
 local-zone: "mon-va.byteoversea.com." always_nxdomain
 local-zone: "mon-va-useast2a.byteoversea.com." always_nxdomain
-local-zone: "mssdk-sg.byteoversea.com." always_nxdomain
-local-zone: "mssdk-sg-bu.byteoversea.com." always_nxdomain
-local-zone: "mssdk-va.byteoversea.com." always_nxdomain
-local-zone: "mssdk-va-useast2a.byteoversea.com." always_nxdomain
 local-zone: "pc-mon-va.byteoversea.com." always_nxdomain
 local-zone: "rtlog.byteoversea.com." always_nxdomain
 local-zone: "sgee-log.byteoversea.com." always_nxdomain
@@ -40,8 +36,6 @@ local-zone: "log-hl.snssdk.com." always_nxdomain
 local-zone: "log-lf.snssdk.com." always_nxdomain
 local-zone: "log-lq.snssdk.com." always_nxdomain
 local-zone: "mon.snssdk.com." always_nxdomain
-local-zone: "mssdk.snssdk.com." always_nxdomain
-local-zone: "mssdk-bu.snssdk.com." always_nxdomain
 local-zone: "os-mon.snssdk.com." always_nxdomain
 local-zone: "pc-mon.snssdk.com." always_nxdomain
 local-zone: "xlog.snssdk.com." always_nxdomain
@@ -62,7 +56,6 @@ local-zone: "business-api.tiktok.com." always_nxdomain
 local-zone: "analytics.us.tiktok.com." always_nxdomain
 local-zone: "analytics-exp.us.tiktok.com." always_nxdomain
 local-zone: "analytics-ttp2.us.tiktok.com." always_nxdomain
-local-zone: "mssdk.us.tiktok.com." always_nxdomain
 local-zone: "log.tiktokv.com." always_nxdomain
 local-zone: "log-i18n.tiktokv.com." always_nxdomain
 local-zone: "log-phx.tiktokv.com." always_nxdomain
@@ -118,6 +111,19 @@ local-zone: "log77-normal-c-useast1a.tiktokv.com." always_nxdomain
 local-zone: "log9-normal-c-useast1a.tiktokv.com." always_nxdomain
 local-zone: "logbk.tiktokv.com." always_nxdomain
 local-zone: "mon.tiktokv.com." always_nxdomain
+local-zone: "mon-i18n.tiktokv.com." always_nxdomain
+local-zone: "mon-phx.tiktokv.com." always_nxdomain
+local-zone: "mon-ru.tiktokv.com." always_nxdomain
+local-zone: "mon-sg.tiktokv.com." always_nxdomain
+local-zone: "mon-useast2a.tiktokv.com." always_nxdomain
+local-zone: "mon-va.tiktokv.com." always_nxdomain
+local-zone: "mon15-checkout.tiktokv.com." always_nxdomain
+local-zone: "mon15-normal.tiktokv.com." always_nxdomain
+local-zone: "mon16-normal.tiktokv.com." always_nxdomain
+local-zone: "mon19-normal.tiktokv.com." always_nxdomain
+local-zone: "mon22-normal.tiktokv.com." always_nxdomain
+local-zone: "mon31-normal.tiktokv.com." always_nxdomain
+local-zone: "mon32-normal.tiktokv.com." always_nxdomain
 local-zone: "monbk.tiktokv.com." always_nxdomain
 local-zone: "rtc-logger-i18n.tiktokv.com." always_nxdomain
 local-zone: "rtc-logger-va.tiktokv.com." always_nxdomain
@@ -167,7 +173,6 @@ local-zone: "log16-applog-useast5.us.tiktokv.com." always_nxdomain
 local-zone: "log16-normal-useast8.us.tiktokv.com." always_nxdomain
 local-zone: "log19-applog-useast5.us.tiktokv.com." always_nxdomain
 local-zone: "mon.us.tiktokv.com." always_nxdomain
-local-zone: "mssdk.us.tiktokv.com." always_nxdomain
 local-zone: "rtc-logger.us.tiktokv.com." always_nxdomain
 local-zone: "rtlog.us.tiktokv.com." always_nxdomain
 local-zone: "rtlog16-applog-useast5.us.tiktokv.com." always_nxdomain
