update anti piracy

--- a/unbound/anti.piracy.blacklist.conf
+++ b/unbound/anti.piracy.blacklist.conf
@@ -3,10 +3,10 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 7 days
-# Last modified: 29 Jun 2023 21:11 UTC
-# Version: 2023.0629.2111.18
+# Last modified: 30 Jun 2023 21:15 UTC
+# Version: 2023.0630.2115.45
 # Syntax: Unbound
-# Number of entries: 6844
+# Number of entries: 6847
 #
 server:
 local-zone: "zer0day.000webhostapp.com." always_nxdomain
@@ -1997,6 +1997,7 @@ local-zone: "erotixxx.net." always_nxdomain
 local-zone: "retracker.nn.ertelecom.ru." always_nxdomain
 local-zone: "retracker.perm.ertelecom.ru." always_nxdomain
 local-zone: "elmellowebmaster.es.tl." always_nxdomain
+local-zone: "escalaenbernal.com." always_nxdomain
 local-zone: "eshiel.com." always_nxdomain
 local-zone: "estrenoslatinos.com." always_nxdomain
 local-zone: "ethor.net." always_nxdomain
@@ -5415,6 +5416,7 @@ local-zone: "thebazaar.sytes.net." always_nxdomain
 local-zone: "szeneworld.eu." always_nxdomain
 local-zone: "savaria.szerverem.hu." always_nxdomain
 local-zone: "p5796a22a.dip0.t-ipconnect.de." always_nxdomain
+local-zone: "tracker.t-rb.org." always_nxdomain
 local-zone: "t-ru.org." always_nxdomain
 local-zone: "katcr.t0r.xyz." always_nxdomain
 local-zone: "t2bot.ru." always_nxdomain
@@ -5600,6 +5602,7 @@ local-zone: "cricfree.theproxy.vip." always_nxdomain
 local-zone: "horriblesubs.theproxy.app." always_nxdomain
 local-zone: "viprow.theproxy.app." always_nxdomain
 local-zone: "cricfree.theproxya.net." always_nxdomain
+local-zone: "tracker.therarbg.com." always_nxdomain
 local-zone: "thesefiles.com." always_nxdomain
 local-zone: "thesegalleries.com." always_nxdomain
 local-zone: "tracker.theshow.click." always_nxdomain
