--- a/unbound/fake.blacklist.conf
+++ b/unbound/fake.blacklist.conf
@@ -3,8 +3,8 @@
 # Homepage: https://github.com/hagezi/dns-blocklists
 # Issues: https://github.com/hagezi/dns-blocklists/issues
 # Expires: 1 day
-# Last modified: 29 Jun 2023 21:18 UTC
-# Version: 2023.0629.2118.33
+# Last modified: 30 Jun 2023 21:21 UTC
+# Version: 2023.0630.2121.42
 # Syntax: Unbound
 # Number of entries: 15619
 #
@@ -2911,7 +2911,6 @@ local-zone: "gtmedia.com.au." always_nxdomain
 local-zone: "guterkauf.com.de." always_nxdomain
 local-zone: "idealo.com.de." always_nxdomain
 local-zone: "kioncapital.com.ar." always_nxdomain
-local-zone: "ojpu.lobusmedical.com.br." always_nxdomain
 local-zone: "lojaacasa.com.br." always_nxdomain
 local-zone: "eli.mobpiscinas.com.br." always_nxdomain
 local-zone: "mulheruniverso.com.br." always_nxdomain
@@ -4651,7 +4650,7 @@ local-zone: "expert-trademiners.com." always_nxdomain
 local-zone: "expertfxtrading.com." always_nxdomain
 local-zone: "expertisetrader4.net." always_nxdomain
 local-zone: "expertoptiontradings.com." always_nxdomain
-local-zone: "store.expertrader.me." always_nxdomain
+local-zone: "expertrader.me." always_nxdomain
 local-zone: "expertsinmoving.com." always_nxdomain
 local-zone: "exploratione.com." always_nxdomain
 local-zone: "expocrypt.com." always_nxdomain
@@ -7116,6 +7115,7 @@ local-zone: "jagkart.com." always_nxdomain
 local-zone: "jagstein.com." always_nxdomain
 local-zone: "jaguaresonline.com." always_nxdomain
 local-zone: "jaimerico.net." always_nxdomain
+local-zone: "jakedstake.com." always_nxdomain
 local-zone: "jakkesalgs.com." always_nxdomain
 local-zone: "jakkesnorge.com." always_nxdomain
 local-zone: "jalpakhabar.com." always_nxdomain
@@ -13416,6 +13416,7 @@ local-zone: "tes-ic.cloud." always_nxdomain
 local-zone: "tesauree.com." always_nxdomain
 local-zone: "tesento.com." always_nxdomain
 local-zone: "tesla-for-doge.com." always_nxdomain
+local-zone: "tesla-openai.com." always_nxdomain
 local-zone: "teslabestfor.com." always_nxdomain
 local-zone: "teslabounce.com." always_nxdomain
 local-zone: "teslabrc.com." always_nxdomain
@@ -13864,7 +13865,6 @@ local-zone: "toponewallet.co." always_nxdomain
 local-zone: "toponstore.com." always_nxdomain
 local-zone: "toposchuheonlineshop.com." always_nxdomain
 local-zone: "topqualityguy.com." always_nxdomain
-local-zone: "topsdiy.com." always_nxdomain
 local-zone: "topshop-eu.com." always_nxdomain
 local-zone: "toptencoin.com." always_nxdomain
 local-zone: "toptrade500.com." always_nxdomain
